<resources>
    <string name="app_name">C0777245_W2020_MAD3125_FP</string>
    <string name="otp">OTP</string>
    <string name="validate">Sign in with Google</string>
    <array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </array>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="signed_out">Signed Out</string>
    <string name="status">Status</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="customer_id">Customer Id</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="bill_id">Bill Id</string>
    <string name="date">Date</string>
    <string name="general_text">General Text</string>
    <string name="total_bill">Total Bill</string>

</resources>
